crates/compiler/src/tests/e2e/good/0100_enum_foo_match/main.gom
enum Foo {
    Bar(int32, int32, int32),
}

fn main() {
    let x = Foo::Bar(1, 2, 3);
    match x {
        Foo::Bar(a, b, c) => println((a + b + c).to_string()),
    };
}
